--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
         
     </style>
 </head>
-<body style="background: #2e2628">
+<body style="background: #222222">
     <nav-bar></nav-bar>
     <div class="container" ng-view></div>
     
